--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -16,7 +16,12 @@
             </div>
             <div class="col-xs-9">
               <h4 class="project-title"><%= link_to project.project_title, project %></h4>
-              <h5><%= project.project_director %></h5>
+              <% if project.isOngoing %>
+                <h6>Status: <span style="color: #d9534f;">Ongoing</span></h6>
+              <% else %>
+                <h6>Status: <span style="color: green;">Finished</span> </h6>
+              <% end %>
+              <h6>Last updated: <%= project.updated_at.strftime('%b' +" " +'%d' +", "+ '%Y'  " / "+ '' + " %I:%M " + '%p') %>
             </div>
           </div>
 
@@ -34,13 +39,18 @@
         <div class="project-box">
           <div class="row">
             <div class="col-xs-3">
-              <div class="">
+              <div class="project-icon-wrapper">
                 <h1 class="box-icon"><span class="glyphicon glyphicon-th-large"></span></h1>
               </div>
             </div>
             <div class="col-xs-9">
               <h4 class="project-title"><%= link_to project.project_title, project %></h4>
-              <h5><%= project.project_director %></h5>
+              <% if project.isOngoing %>
+                <h6>Status: <span style="color: #d9534f;">Ongoing</span></h6>
+              <% else %>
+                <h6>Status: <span style="color: green;">Finished</span> </h6>
+              <% end %>
+              <h6>Last updated: <%= project.updated_at.strftime('%b' +" " +'%d' +", "+ '%Y') %> </h6>
             </div>
           </div>
 
@@ -48,48 +58,6 @@
       </div>
     <% end %>
   </div>
-
   <% end %>
-
-
-  <table>
-    <thead>
-      <tr>
-        <th>Project title</th>
-        <th>Project acronym</th>
-        <th>Project director</th>
-        <th>Funding agency</th>
-        <th>Start date</th>
-        <th>End date</th>
-        <th>Total budget</th>
-        <th>Total amount spent</th>
-        <th>Account number</th>
-        <th colspan="3"></th>
-      </tr>
-    </thead>
-
-    <tbody>
-      <% @projects.each do |project| %>
-        <tr>
-          <td><%= project.project_title %></td>
-          <td><%= project.project_acronym %></td>
-          <td><%= project.project_director %></td>
-          <td><%= project.funding_agency %></td>
-          <td><%= project.start_date %></td>
-          <td><%= project.end_date %></td>
-          <td><%= project.total_budget %></td>
-          <td><%= project.total_amount_spent %></td>
-          <td><%= project.account_number %></td>
-          <td><%= link_to 'Show', project %></td>
-          <td><%= link_to 'Edit', edit_project_path(project) %></td>
-          <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
-
-  <br>
-
-  <%= link_to 'New Project', new_project_path %>
 
 </div>
