--- a/app/views/records/new.html.erb
+++ b/app/views/records/new.html.erb
@@ -1,5 +1,4 @@
-<h1>New Record</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', project_item_records_path %>
+<h1 class="form-head">Add New Record to <%= @item %></h1>
+<div class="form-wrapper">
+  <%= render 'form' %>
+</div>
