--- a/app/assets/stylesheets/tasks.css.scss
+++ b/app/assets/stylesheets/tasks.css.scss
@@ -2,6 +2,18 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+// SHOW TASK
+
+.description-paragraph {
+  padding: 15px;
+  background: #fff;
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+}
+
+.task-dates {
+    margin-bottom: 25px;
+}
+
 // NEW TASK STYLING
 
 .new-task-form {
