--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -17,7 +17,7 @@
     </div>
   <% end %>
 
-  <%= link_to project_tasks_path(@project) do %>
+  <%= link_to project_progress_path(@project) do %>
     <div class="col-xs-3">
        Progress
     </div>
@@ -30,7 +30,13 @@
   <p id="notice"><%= notice %></p>
 
   <div class="index-items">
-    <h3>Project Financial Plan <%= link_to new_project_item_path(:project_id => params[:project_id]), class: "add-to" do %><span class="glyphicon glyphicon-plus"></span><% end %></h3>
+    <h3>Project Financial Plan
+      <% if current_staff.admin? == true %>
+        <%= link_to new_project_item_path(:project_id => params[:project_id]), class: "add-to" do %>
+        <span class="glyphicon glyphicon-plus"></span>
+        <% end %>
+      <% end %>
+    </h3>
     <h4 class="project-heading"><%= @project.project_title%></h4><br>
     <table class="table">
       <thead>
@@ -38,7 +44,13 @@
           <th>Item</th>
           <th>Approved Budget</th>
           <th>Amount spent</th>
-          <th colspan="3"></th>
+          <% if current_staff.admin? %>
+            <th colspan="3" class="text-center"> Options</th>
+          <% else %>
+            <th class="text-center">
+              View Records
+            </th>
+          <% end %>
         </tr>
       </thead>
 
@@ -48,9 +60,20 @@
             <td><%= item.item_title %></td>
             <td class="text-right"><%= item.budget %></td>
             <td class="text-right"><%= item.amount_spent %></td>
-            <td><%= link_to 'Show', project_item_path(:id => item.id, :project_id => params[:project_id]) %></td>
-            <td><%= link_to 'Edits', edit_project_item_path(:id => item.id, :project_id => params[:project_id]) %></td>
-            <td><%= link_to 'Destroy', project_item_path(:id => item.id, :project_id => params[:project_id]), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            <td class="text-center"><%= link_to project_item_path(:id => item.id, :project_id => params[:project_id]) do %>
+              <span class="glyphicon glyphicon-file"></span>
+              <% end %>
+            </td>
+            <% if current_staff.admin? %>
+            <td class="text-center"><%= link_to edit_project_item_path(:id => item.id, :project_id => params[:project_id]) do %>
+              <span class="glyphicon glyphicon-cog"></span>
+              <% end %>
+            </td>
+            <td class="text-center"><%= link_to project_item_path(:id => item.id, :project_id => params[:project_id]), method: :delete, data: { confirm: 'Are you sure?' } do %>
+              <span class="glyphicon glyphicon-remove"></span>
+              <% end %>
+            </td>
+            <% end %>
           </tr>
         <% end %>
       </tbody>
