--- a/app/views/records/_form.html.erb
+++ b/app/views/records/_form.html.erb
@@ -9,6 +9,7 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit %>
+    <%= link_to 'Back', project_item_records_path, class: "btn btn-danger" %>
+    <%= f.button :submit, class: "btn btn-primary" %>
   </div>
 <% end %>
