--- a/app/views/projects/progress.html.erb
+++ b/app/views/projects/progress.html.erb
@@ -31,50 +31,94 @@
   <span class="date-as-of"><%= "#{Date.today.strftime('%b' +" " +'%d' +", "+ '%Y')}"%></span>
 
   <div class="row progress-report-row">
-    <div class="col-md-3 item-info">
-      <h4>Budget:
-        <%= @project.total_budget %>
-      </h4>
+    <div class="col-md-6">
+      <h4 class="text-center graph-heading">Expenditure per item</h4>
+      <canvas id="myChart" class="expenditure-per-item" width="400" height="400"></canvas>
+      <script>
+      var ctx = document.getElementById("myChart");
+      var myChart = new Chart(ctx, {
+          type: 'bar',
+          data: {
+              labels: <%= raw @project.get_items%>,
+              datasets: [{
+                  label: 'Amount Spent',
+                  backgroundColor: "rgba(33, 150, 243, 1)",
+                  hoverBackgroundColor: "rgba(117, 117, 117, 1)",
+                  data: <%= @items.map(&:amount_spent) %>
+              }]
+          },
+          options: {
+              scales: {
+                  yAxes: [{
+                      ticks: {
+                          beginAtZero:true
+                      }
+                  }]
+              }
+          }
+      });
+      </script>
     </div>
-    <div class="col-md-3 workplan-info">
-      <h4>Budget spent:
-        <%= @project.total_amount_spent %>
-      </h4>
+    <div class="col-md-6">
+      <h4 class="text-center graph-heading">Project overview</h4>
+
+        <div class="row row-progtext">
+            <div class="col-xs-4">
+              <h5 class="progtext-heading">Total budget:</h5>
+            </div>
+            <div class="col-xs-8 text-right">
+              <h5><%= @project.total_budget %></h5>
+            </div>
+        </div>
+
+        <div class="row row-progtext">
+            <div class="col-xs-4">
+              <h5 class="progtext-heading">Total budget spent:</h5>
+            </div>
+            <div class="col-xs-8 text-right">
+              <h5><%= @project.total_amount_spent %></h5>
+            </div>
+        </div>
+
+        <div class="row row-progtext">
+            <div class="col-xs-4">
+              <h5 class="progtext-heading">Total budget left:</h5>
+            </div>
+            <div class="col-xs-8 text-right">
+              <h5><%= @project.total_budget - @project.total_amount_spent %></h5>
+            </div>
+        </div>
+
+        <div class="row row-progbar">
+          <div class="col-md-12">
+
+              <h5>Expenditure %</h5>
+              <div class="progress">
+                <div class="progress-bar progress-bar-striped active progress-percentage-spent" role="progressbar"
+                aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: <%= @project.actual_expenditure_percentage %>%;">
+                  <%= @project.actual_expenditure_percentage %>%
+                </div>
+              </div>
+          </div>
+
+        </div>
+
+        <div class="row row-progbar">
+          <div class="col-md-12">
+            <h5>Workplan progress</h5>
+              <div class="progress">
+                <div class="progress-bar progress-bar-striped active progress-percentage-spent" role="progressbar"
+                aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: <%= @project.get_task_percentage_done %>%;">
+                  <%= @project.get_tasks_done %>/<%= @project.tasks.count %>
+                </div>
+              </div>
+          </div>
+        </div>
+
+
     </div>
-    <div class="col-md-3 workplan-info">
-      <h4> Budget left:
-        <%= @project.total_budget - @project.total_amount_spent %>
-      </h4>
-    </div>
+
   </div><br>
-
-<p>
-  Tasks done
-</p>
-  <div class="progress">
-    <div class="progress-bar progress-bar-striped active progress-percentage-spent" role="progressbar"
-    aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: <%= @project.get_task_percentage_done %>%;">
-      <%= @project.get_tasks_done %>/<%= @project.tasks.count %>
-    </div>
-  </div>
-
-<p>
-  Expenditure %
-</p>
-  <div class="progress">
-    <div class="progress-bar progress-bar-striped active progress-percentage-spent" role="progressbar"
-    aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: <%= @project.actual_expenditure_percentage %>%;">
-      <%= @project.actual_expenditure_percentage %>%
-    </div>
-  </div>
-
-
-<%= line_chart @project.items.map { |item|
-    {name: item.item_title, data: item.records.group_by_day(:created_at).count }
-} %>
-
-
-
 
 
 </div>
