--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -102,7 +102,7 @@
     <div class="container-fluid body">
       <div class="row">
 
-<% if staff_signed_in? %>
+<% if staff_signed_in? && current_staff.admin %>
 <!-- Start of Side-bar -->
         <div class="col-sm-3 col-md-2 sidebar">
 
