--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -205,14 +205,24 @@ body {
 
 .new-sessions-form {
 	background: #fff;
-	width: 65%;
+	width: 30%;
 	margin: auto;
 	margin-top: 75px;
 	border: 1px solid #eee;
 	box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+	padding-bottom: 10px;
 
 	.form-inputs {
 		padding: 10px 20px 10px 20px;
+	}
+
+	.form-actions {
+		padding: 10px;
+
+		.btn {
+			background: #1C3F94;
+			width: 100%;
+		}
 	}
 
 	h2 {
