does not allow expenditure more than balance left

--- a/app/views/records/new.html.erb
+++ b/app/views/records/new.html.erb
@@ -1,4 +1,9 @@
 <h1 class="form-head">Add New Record to <%= @item %></h1>
 <div class="form-wrapper">
+
   <%= render 'form' %>
+  
 </div>
+<div class="row">
+  	<%= notice %>
+  </div>
