removed contract expiration notif for now

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -42,8 +42,8 @@
       <thead>
         <tr>
           <th>Item</th>
-          <th>Approved Budget</th>
-          <th>Amount spent</th>
+          <th class="text-right">Approved Budget</th>
+          <th class="text-right">Amount spent</th>
           <% if current_staff.admin? %>
             <th colspan="3" class="text-center"> Options</th>
           <% else %>
