--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -6,6 +6,8 @@
       <%= f.input :task_title %>
       <%= f.input :description %>
       <%= f.input :due_date %>
+      <%= f.label :submission, "Upload submission" %>
+      <%= f.file_field :submission %>
       <%= f.hidden_field  :project_id, :value => params[:project_id] %>
     </div>
 <br>
