--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -75,7 +75,7 @@
             <th colspan="3" class="text-center"> Options </th>
           <% else %>
             <th class="text-center">
-               Finish Deliberable
+               Finish Deliverable
             </th>
           <% end %>
         </tr>
@@ -169,6 +169,9 @@
                   <li><%= link_to 'Delete task', project_task_path(:id => task.id, :project_id => params[:project_id]), method: :delete, data: { confirm: 'Are you sure?' } %></li>
                 </ul>
               </div>
+            <% else %>
+              <%= link_to edit_project_task_path(:id => task.id, :project_id => params[:project_id]) do %> <span class="glyphicon glyphicon-edit"></span>
+              <% end %>
             <% end %>
           </div>
         </div>
