--- a/app/views/tasks/_finishForm.html.erb
+++ b/app/views/tasks/_finishForm.html.erb
@@ -24,6 +24,8 @@
       <%= f.error_notification %>
 
       <div class="form-inputs">
+        <%= f.file_field :submission %>
+      <%= f.hidden_field  :project_id, :value => params[:project_id] %>
         <%= f.hidden_field  :project_id, :value => params[:project_id] %>
         <%= f.hidden_field :isFinished, :value => true %>
         <%= f.hidden_field :date_accomplished, :value => Date.today %>
