--- a/app/views/pages/staffoptions.html.erb
+++ b/app/views/pages/staffoptions.html.erb
@@ -4,7 +4,7 @@
 
   <% @staffs.each do |staff| %>
     <h5> <%= staff %> </h5>
-    <h6> <%= link_to "Cancel my account", staff_registration_path(staff), :confirm => "Are you sure?", :method => :delete %> </h6>
+    <h6> <%= link_to "Cancel my account", staff_registration_path(staff_id: staff), :confirm => "Are you sure?", :method => :delete %> </h6>
   <% end  %>
 
 </div>
