--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -155,3 +155,21 @@
     font-size: 1em;
   }
 }
+
+.dl-row {
+  text-align: center;
+  padding-top: 15px;
+}
+
+.PDF-DL {
+  color: #fff !important;
+  padding: 7px;
+  background: rgb(33, 150, 243);
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+}
+
+.PDF-DL:hover {
+  text-decoration: none;
+  background: #1976d2 ;
+  color: #fff;
+}
