--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -50,7 +50,7 @@
     </h4>
   </div>
   <div class="col-md-3 workplan-info">
-    <h4>Overdue Tasks: 0
+    <h4>Overdue Tasks: <%= @project.get_overdue_tasks %>
     </h4>
   </div>
 </div><br>
@@ -82,7 +82,7 @@
       </thead>
 
       <tbody>
-        <% @project.tasks.each do |task| %>
+        <% @sort.each do |task| %>
             <tr>
               <td><%= task.task_title %></td>
               <td><%= task.description %></td>
