--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+// MANAGE STAFF ACCOUNT STYLING
+
+.staff-table {
+  margin-top: 40px;
+}
+
+thead {
+  background: #1C3F94;
+  color: white;
+}
