--- a/app/views/projects/progress.html.erb
+++ b/app/views/projects/progress.html.erb
@@ -115,12 +115,13 @@
           </div>
         </div>
 
-        <div class="row dl-row">
-          <%= link_to project_progress_path(@project, :format => 'pdf'), class: "PDF-DL" do %>
-            Download as PDF <span class="glyphicon glyphicon-download-alt"></span>
-          <% end %>
-        </div>
-
+        <% if current_staff.admin? %>
+          <div class="row dl-row">
+            <%= link_to project_progress_path(@project, :format => 'pdf'), class: "PDF-DL" do %>
+              Download as PDF <span class="glyphicon glyphicon-download-alt"></span>
+            <% end %>
+          </div>
+        <% end %>
 
 
     </div>
