--- a/app/assets/stylesheets/items.css.scss
+++ b/app/assets/stylesheets/items.css.scss
@@ -20,17 +20,20 @@
   font-weight: lighter;
 }
 
-.item-info {
-  background: #fff;
-  margin: 0 40px 20px 40px;
-  padding: 15px 5px 15px 5px;
-  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+.item-info-row {
   text-align: center;
+
+	h4 {
+		background: #fff;
+		padding: 25px 0 25px 0;
+		box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+	}
 
   span {
     margin-left: 5px;
   }
 }
+
 
 .show-item-table {
   background: #1C3F94;
