--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -4,6 +4,12 @@
 
 // INDEX PROJECT STYLING
 
+.project-link:hover {
+  .project-icon-wrapper {
+    background: #1565c0;
+  }
+}
+
 .index-items {
   thead tr th {
     text-align: center;
@@ -73,12 +79,13 @@
 
 .staff-row {
   margin-top: 20px;
-  padding: 10px;
+  padding: 10px 20px 10px 20px;
 
   h4 {
     background: #1C3F94;
     padding: 10px;
     color: #fff;
+    font-size: 1.1em;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   }
 
