--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
                         <% end %>
                     <% end %>
               <div class="dropdown" id="user-menu">
-                <div class="dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                <div class="dropdown-toggle nav-notif" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                   Notifications
                   <% if updatescount > 0  %>
                     <span class="badge"> <%= updatescount %></span>
@@ -82,7 +82,7 @@
 
             <% if current_staff.admin == false  %>
             <li>
-              <%= link_to "Home", root_url%>
+              <%= link_to "Home", root_url, class: "nav-home" %>
             </li>
             <% end %>
 
@@ -116,15 +116,19 @@
 
           <ul class="nav nav-sidebar">
             <!-- <li class="active"><a href="#">All Projects<span class="sr-only">(current)</span></a></li> -->
-            <li><%= link_to 'All projects', root_url %> </li>
+            <li><%= link_to root_url do %>
+              <span class="glyphicon glyphicon-list-alt"></span> View all projects
+              <% end %>
+            </li>
             <li><%= link_to new_project_path do %> <span class="glyphicon glyphicon-plus" ></span> Create new project   <% end %></li>
           </ul>
 
           <ul class="nav nav-sidebar">
-            <li><%= link_to 'All staff', pages_staffoptions_path %></li>
-            <li><%= link_to new_staff_registration_path do %> <span class="glyphicon glyphicon-user"></span> Add new staff  <% end %></li>
-            <li><a href="">Add New Admin</a></li>
-            <li><a href="">Disable User</a></li>
+            <li><%= link_to pages_staffoptions_path do %> <span class="glyphicon glyphicon-user"></span> Manage staff  <% end %></li>
+            <li><%= link_to new_staff_registration_path do %>
+              <span class="glyphicon glyphicon-plus"></span> Add new staff account
+              <% end %>
+            </li>
           </ul>
 
           <!-- <ul class="nav nav-sidebar">
@@ -152,5 +156,5 @@
     </div>
 
 
-</body>s
+</body>
 </html>
